--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>POP TONIC S.L. — Digital Content, AI Tools & Platform Solutions</title>
+  <title>POP TONIC S.L. - Digital Content, AI Tools & Platform Solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta
     name="description"
@@ -1027,7 +1027,7 @@
             <h2 class="hero-card-title">Smart digital products designed to make life easier</h2>
             <p class="hero-card-text">
               We blend creativity, technology, and user-centered design to deliver
-              complete digital ecosystems — from simple resources to full platforms.
+              complete digital ecosystems - from simple resources to full platforms.
             </p>
             <ul class="hero-feature-list">
               <li>Educational digital content for children &amp; teens (managed by adults)</li>
@@ -1067,7 +1067,7 @@
 
         <p class="hero-footer-note">
           Whether you’re supporting learning at home, improving classroom materials,
-          launching a digital brand, or building a platform for your business —
+          launching a digital brand, or building a platform for your business ,
           POP TONIC delivers modern, beautifully designed digital solutions.
         </p>
       </div>
@@ -1112,7 +1112,7 @@
             <div class="about-box-title">Human-centered, technology-driven</div>
             <p>
               We combine thoughtful design with ethical, responsible technology.
-              Every project starts with people — how they learn, work, and create —
+              Every project starts with people - how they learn, work, and create ,
               and then we design systems, content, and tools around their real needs.
             </p>
             <div class="about-tag-row">
@@ -1149,7 +1149,7 @@
         <div class="section-kicker">Services</div>
         <h2 class="section-title">What We Build</h2>
         <p class="services-subtitle">
-          POP TONIC S.L. develops a broad portfolio of digital products and services —
+          POP TONIC S.L. develops a broad portfolio of digital products and services ,
           from ready-to-use content to complete platforms and AI-enhanced systems.
         </p>
       </div>
@@ -1161,7 +1161,7 @@
             <div>
               <div class="service-title">Educational Digital Products</div>
               <p>
-                Learning resources designed to support children and teens — always
+                Learning resources designed to support children and teens - always
                 purchased and guided by adults.
               </p>
             </div>
@@ -1250,7 +1250,7 @@
         <p>
           <strong>Our promise:</strong> every project combines clear structure,
           strong design, and practical functionality. We create digital experiences
-          that are easy to use, visually consistent, and aligned with your real goals —
+          that are easy to use, visually consistent, and aligned with your real goals ,
           whether you’re a family, a creator, or a growing business.
         </p>
       </div>
@@ -1264,7 +1264,7 @@
         <div class="section-kicker">Contact</div>
         <h2 class="section-title">Let’s Build Something Great Together</h2>
         <p class="section-intro" style="text-align:center; margin-left:auto; margin-right:auto;">
-          Whether you're a parent, teacher, creator, or business owner — POP TONIC S.L.
+          Whether you're a parent, teacher, creator, or business owner .. POP TONIC S.L.
           is here to support your digital projects with thoughtful, modern, and scalable
           solutions.
         </p>
@@ -1387,7 +1387,7 @@
         var lastScrollY = window.scrollY;
 
         window.addEventListener("scroll", function () {
-          var w = window.innerWidth || document.documentElement.clientWidth;
+          var w = window.innerWidth || doc0ument.documentElement.clientWidth;
           if (w > 720) {
             // Desktop: never hide
             nav.classList.remove("nav-hidden-mobile");
