--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Privacy Policy & Legal Notice — POP TONIC S.L.</title>
+  <title>Privacy Policy & Legal Notice - POP TONIC S.L.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta
     name="description"
